# RSC_ROS2

./: README.md
RSC_description/: CMakeLists.txt  README.md  package.xml
RSC_description/launch/: display_robot.launch.py  display_torso.launch.py
RSC_description/meshes/: back.STL  button.STL  frame.STL  lid.STL  screen.STL
RSC_description/rviz/: RSC_show.rviz
RSC_description/urdf/: main.urdf.xacro
RSC_movements_emotions/: CMakeLists.txt  README.md  package.xml
RSC_movements_emotions/scripts/: caring.py  caringT.py  emotion.py  fun.py  neutral.py  neutralT.py  pride.py
rsc_description/: CMakeLists.txt  README.md  package.xml
rsc_description/launch/: display_robot.launch.py  display_torso.launch.py
rsc_description/meshes/: base.STL  flipper.STL
rsc_description/scripts/: video_file_publisher.py
rsc_description/urdf/: torso.urdf.xacro
rsc_movements_emotions/: CMakeLists.txt  README.md  package.xml
rsc_movements_emotions/scripts/: anger.py  angerT.py  emotionT.py  funT.py  joy.py  joyT.py  prideT.py  surprise.py  surpriseT.py
rviz_video_screen/: CMakeLists.txt  package.xml  plugins.xml
rviz_video_screen/include/rviz_video_screen/: video_screen_display.hpp
rviz_video_screen/src/rviz_video_screen/: video_screen_display.cpp
