<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rsc_description</name>
  <version>0.0.0</version>
  <description>Package for simulating my robot in RViz and Gazebo.</description>
  
  <maintainer email="calafa@ut.ee">Miriam</maintainer>
  <license>Apache-2.0</license> <!-- Replace with your chosen license -->

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- General dependencies -->
  <depend>rviz2</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>

  <!-- Runtime dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
    <rviz_common plugin="${prefix}/plugins.xml"/>
  </export>


</package>
